--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,55 @@ dist.jar=${dist.dir}/FSMBuilder.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jung2-2_0_1.zip=/home/zaurbek/\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u044b/libraries/java/jung2-2_0_1.zip
+file.reference.collections-generic-4.01.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\collections-generic-4.01.jar
+file.reference.collections-generic-4.01.jar-1=/home/zaurbek/\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u044b/libraries/java/jung2-2_0_1/collections-generic-4.01.jar
+file.reference.colt-1.2.0.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\colt-1.2.0.jar
+file.reference.concurrent-1.3.4.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\concurrent-1.3.4.jar
+file.reference.j3d-core-1.3.1.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\j3d-core-1.3.1.jar
+file.reference.jung-3d-2.0.1.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\jung-3d-2.0.1.jar
+file.reference.jung-3d-demos-2.0.1.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\jung-3d-demos-2.0.1.jar
+file.reference.jung-algorithms-2.0.1.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\jung-algorithms-2.0.1.jar
+file.reference.jung-algorithms-2.0.1.jar-1=/home/zaurbek/\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u044b/libraries/java/jung2-2_0_1/jung-algorithms-2.0.1.jar
+file.reference.jung-api-2.0.1.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\jung-api-2.0.1.jar
+file.reference.jung-api-2.0.1.jar-1=/home/zaurbek/\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u044b/libraries/java/jung2-2_0_1/jung-api-2.0.1.jar
+file.reference.jung-graph-impl-2.0.1.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\jung-graph-impl-2.0.1.jar
+file.reference.jung-graph-impl-2.0.1.jar-1=/home/zaurbek/\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u044b/libraries/java/jung2-2_0_1/jung-graph-impl-2.0.1.jar
+file.reference.jung-io-2.0.1.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\jung-io-2.0.1.jar
+file.reference.jung-jai-2.0.1.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\jung-jai-2.0.1.jar
+file.reference.jung-jai-samples-2.0.1.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\jung-jai-samples-2.0.1.jar
+file.reference.jung-samples-2.0.1.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\jung-samples-2.0.1.jar
+file.reference.jung-visualization-2.0.1.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\jung-visualization-2.0.1.jar
+file.reference.jung-visualization-2.0.1.jar-1=/home/zaurbek/\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u044b/libraries/java/jung2-2_0_1/jung-visualization-2.0.1.jar
+file.reference.stax-api-1.0.1.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\stax-api-1.0.1.jar
+file.reference.vecmath-1.3.1.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\vecmath-1.3.1.jar
+file.reference.wstx-asl-3.2.6.jar=D:\\Zaurbek\\libraries\\jung2-2_0_1\\wstx-asl-3.2.6.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jung2-2_0_1.zip}
+    ${file.reference.collections-generic-4.01.jar}:\
+    ${file.reference.colt-1.2.0.jar}:\
+    ${file.reference.concurrent-1.3.4.jar}:\
+    ${file.reference.j3d-core-1.3.1.jar}:\
+    ${file.reference.jung-3d-2.0.1.jar}:\
+    ${file.reference.jung-3d-demos-2.0.1.jar}:\
+    ${file.reference.jung-algorithms-2.0.1.jar}:\
+    ${file.reference.jung-api-2.0.1.jar}:\
+    ${file.reference.jung-graph-impl-2.0.1.jar}:\
+    ${file.reference.jung-io-2.0.1.jar}:\
+    ${file.reference.jung-jai-2.0.1.jar}:\
+    ${file.reference.jung-jai-samples-2.0.1.jar}:\
+    ${file.reference.jung-samples-2.0.1.jar}:\
+    ${file.reference.jung-visualization-2.0.1.jar}:\
+    ${file.reference.stax-api-1.0.1.jar}:\
+    ${file.reference.vecmath-1.3.1.jar}:\
+    ${file.reference.wstx-asl-3.2.6.jar}:\
+    ${file.reference.jung-graph-impl-2.0.1.jar-1}:\
+    ${file.reference.jung-visualization-2.0.1.jar-1}:\
+    ${file.reference.jung-algorithms-2.0.1.jar-1}:\
+    ${file.reference.jung-api-2.0.1.jar-1}:\
+    ${file.reference.collections-generic-4.01.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,6 +99,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=fsmbuilder.FSMBuilder
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
